2002-11-30  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/Image.cpp: Gracefully handle the case
          where we're attempting to advance beyond the last frame of
          a MovieTexture.

        * src/openvrml/OpenVRML/vrml97node.cpp: Fix a couple of problems
          with MovieTexture nodes.

        * doc/conformance.html: Update conformance test results.

2002-11-23  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4: Use C++ when testing for libGLU.  libGLU may need to
          link with libstc++.

        * src/openvrml/OpenVRML/node.cpp:  Put Node's initializer list
          in the right order.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  libopenvrml-gl
          no longer depends on glut.

        * src/openvrml/OpenVRML/script.cpp:  Fixed bug in JavaScript
          SFRotation constructor that takes two vectors.

        * src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/field.cpp:  Added addElement methods to
          MF* classes.

        * openvrml.pc.in, openvrml-gl.pc.in:  No longer require glut; made
          openvrml-gl require openvrml; other cleanup.

2002-11-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/MathUtils.cpp,
          src/openvrml/OpenVRML/MathUtils.h,
          src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/field.cpp, src/openvrml/OpenVRML/field.h
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Doc-comment
          fix-ups.

        * doc/openvrml.css: Style sheet improvements.
